--- a/styles/main.css
+++ b/styles/main.css
@@ -119,14 +119,6 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   border: 0;
   padding: 0; }
 
-.clearfix:after {
-  visibility: hidden;
-  display: block;
-  font-size: 0;
-  content: '';
-  clear: both;
-  height: 0; }
-
 * {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -228,8 +220,7 @@ textarea {
     font-size: 38px; }
     h1 span.helloWorld {
       font-size: 25px; }
-  .menu {
-    font-size: 18px; }
+  .menu,
   .project p {
     font-size: 18px; } }
 
@@ -239,7 +230,8 @@ h2 {
   border-bottom: 1px solid #222222; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: inherit; }
 
 h1,
 h2,
@@ -252,8 +244,7 @@ button {
 
 img {
   width: 100%;
-  max-width: 100%;
-  display: block; }
+  max-width: 100%; }
 
 ul {
   padding-left: 0; }
@@ -261,8 +252,13 @@ ul {
 li {
   list-style-type: none; }
 
+button,
+[type="text"],
+[type="email"],
+textarea {
+  border: none; }
+
 button {
-  border: none;
   background-color: inherit;
   font-size: 40px;
   text-align: center; }
@@ -270,7 +266,6 @@ button {
 [type="text"],
 [type="email"],
 textarea {
-  border: none;
   padding-top: 20px; }
 
 .wrapper {
@@ -411,7 +406,6 @@ header .parallax-window {
 
 header .arrowDown {
   margin: 9px auto 0;
-  height: 30px;
   color: #222222; }
 
 main {
@@ -469,8 +463,7 @@ nav {
     margin: 0; }
   nav .menuItem a {
     position: relative;
-    padding-bottom: 5px;
-    color: inherit; }
+    padding-bottom: 5px; }
     nav .menuItem a:hover {
       color: #314850; }
     nav .menuItem a::before {
@@ -519,7 +512,7 @@ nav {
   text-align: center; }
   .aboutWrapper .aboutText,
   .aboutWrapper .aboutPic {
-    width: 50%; }
+    width: 49%; }
   .aboutWrapper .aboutText {
     text-align: left; }
     .aboutWrapper .aboutText h2 {
@@ -567,8 +560,7 @@ nav {
   width: 39%; }
   .socialMedia a {
     width: 30%;
-    font-size: 35px;
-    color: inherit; }
+    font-size: 35px; }
     .socialMedia a:hover, .socialMedia a:focus {
       -webkit-animation: jello-vertical 0.9s both;
       animation: jello-vertical 0.9s both; }
@@ -628,9 +620,9 @@ nav {
   -webkit-box-direction: normal;
   -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -650,8 +642,6 @@ nav {
     font-weight: 400; }
   .project p {
     margin-bottom: 35px; }
-  .project a {
-    color: inherit; }
   .project .buddies:hover {
     border-bottom: 1px solid #222222; }
   .project .codeLink {
@@ -718,7 +708,8 @@ footer {
   padding: 15px;
   text-align: center; }
   footer p {
-    margin: 0; }
+    margin: 0;
+    font-weight: 400; }
 
 @media (max-width: 1150px) {
   nav .menu {
@@ -809,6 +800,6 @@ footer {
     padding-bottom: 10px; } }
 
 @media (max-width: 400px) {
-  .project a {
+  .project .codeLink {
     display: inline-block;
     margin-bottom: 20px; } }
