--- a/styles/partials/_page.scss
+++ b/styles/partials/_page.scss
@@ -162,9 +162,13 @@ nav {
         fill:black;
     }
 }
+.worksWrapper {
+    overflow: hidden;
+}
 .project {
     @include flex(row, center, center, left);
     margin-top: 50px;
+    // overflow: hidden;
     &:first-of-type  {
         margin-top: 30px;
     }
@@ -245,6 +249,7 @@ nav {
     }
     textarea {
         resize: vertical;
+        margin-bottom: 35px;
     }
 }
 .arrowUp {
@@ -380,6 +385,9 @@ footer {
     }
 }
 @media (max-width:400px) {
+    header .parallax-window {
+        padding-top: 17%;
+    }
     .project .codeLink {
         display: inline-block;
         margin-bottom: 20px;
