--- a/styles/partials/_page.scss
+++ b/styles/partials/_page.scss
@@ -13,6 +13,7 @@ span.letters {
     animation: fadeIn .5s 0s forwards;
     opacity: 0; 
 }
+
 //header
 header {
     .headerWrapper {
@@ -165,13 +166,12 @@ nav {
 .fixedBgOne,
 .fixedBgTwo {
     height:400px;
-
 }
 .fixedBgOne {
-        background:url(../assets/pegasus.jpg);
+    background-image:url(../assets/pegasus.jpg);
 }
 .fixedBgTwo {
-    background: url(../assets/street.jpg);
+    background-image: url(../assets/street.jpg);
 }
 .worksWrapper {
     overflow: hidden;
@@ -371,6 +371,9 @@ footer {
     
 }
 @media (max-width:550px) {
+    header .headerWrapper{
+        padding-top: 18.5%;
+    }
     .icons {
         .skillIcon {
                 width:50%;
@@ -404,7 +407,7 @@ footer {
 }
 @media (max-width:400px) {
     header .headerWrapper{
-        padding-top: 21%;
+        padding-top: 24%;
     }
     .project .codeLink {
         display: inline-block;
